<resources>
    <!-- Main -->
    <string name="app_name">Rtt Express</string>
    <string name="try_again">Tente novamente</string>
    <string name="show_list">Mostrar Lista</string>
    <string name="out">Sair</string>
    <string name="hello">Olá, %1$s</string>

    <!-- General -->
    <string name="general_loading">Carregando...</string>
    <string name="general_alert_dialog_ok">OK</string>
    <string name="general_alert_dialog_title">Atenção</string>
    <string name="general_alert_dialog_description">Enviamos um email com o passo a passo para resetar sua senha!</string>


    <!--Login Register-->
    <string name="login_register_toolbar_title">Cadastro de Usuário</string>
    <string name="login_register_hint_name">Nome</string>
    <string name="login_register_hint_email">E-mail</string>
    <string name="login_register_hint_password">Senha</string>
    <string name="login_register_hint_confirmpassword">Confirmar Senha</string>
    <string name="login_register_hint_use_terms"><![CDATA[
            Li e estou de acordo com o <a href="%1$s">regulamento</a>
        ]]></string>
    <string name="login_register_hint_btn_register">Cadastrar</string>

    <!--Login -->
    <string name="login_email_hint_login">Digite seu e-mail</string>
    <string name="login_password_login">Digite sua senha</string>
    <string name="login_login_button">Login</string>
    <string name="login_account_name">Cadastra-se</string>
    <string name="login_remember_my_password">Esqueci a senha</string>

    <!-- Loading -->
    <string name="loading_generate_loading">Gerar carregamento</string>
    <string name="loading_follow_loading">Acompanhar carregamento</string>
    <string name="loading_follow_label">Carregamento</string>

    <string name="loading_qtd_loading">Quantidade</string>
    <string name="loading_date_register_loading">Data de cadastro</string>
    <string name="loading_description">Descrição</string>
    <string name="loading_withdrawal_date">Data de retirada</string>
    <string name="loading_withdrawal_hour">Hora de retirada</string>
    <string name="loading_value_propose">Valor proposto</string>
    <string name="loading_observation">Observação</string>
    <string name="loading_button_next">Próximo</string>
    <string name="loading_send_loadings">Enviar Carregamento</string>
    <string name="loading_selecteds_header">Selecionados %1$s de %2$s</string>
    <string name="loading_button_ok">OK</string>
    <string name="loading_msg_confirm">Carregamento gerado com sucesso!</string>

</resources>
