<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_empresa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp"
        />

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/tiEmailLogin"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/ivLogin">

   <com.google.android.material.textfield.TextInputEditText
       android:id="@+id/teEmailLogin"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:drawableEnd="@drawable/ic_letter"
       android:drawablePadding="4dp"
       android:fontFamily="@font/montserrat_regular"
       android:hint="@string/login_email_hint_login"
       android:textColor="@color/colorPrimaryDark"
       />

  </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:passwordToggleEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tiEmailLogin">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_regular"
        android:inputType="textPassword"
        android:hint="@string/login_password_login"
        android:textColor="@color/colorPrimaryDark"
    />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorAccent"
        android:fontFamily="@font/montserrat_regular"
        android:onClick="@{() -> viewModel.onShowAndroidJobsRequire()}"
        android:text="@string/login_login_button"
        android:textColor="@color/colorPrimary"
        android:textAllCaps="false"
        android:textSize="18dp"
        android:enabled="false"
        app:layout_constraintBottom_toTopOf="@+id/btnAccountName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/btnAccountName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="64dp"
        android:gravity="center"
        android:onClick="@{() -> viewModel.onOutAppLiveData()}"
        android:text="@string/login_account_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btnLogin" />

    <TextView
        android:id="@+id/btnRememberPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="64dp"
        android:gravity="center"
        android:onClick="@{() -> viewModel.onOutAppLiveData()}"
        android:text="@string/login_remember_my_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>