<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiLoadingQtd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tiLoadingDateRegister">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLoadingQtd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/loading_qtd_loading"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="12sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiLoadingDateRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tiLoadingQtd">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLoadingDateRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/loading_date_register_loading"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="12sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressLoadingClients"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerLoadingClients"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tiLoadingQtd" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinnerLoadingClients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        style="@style/SpinnerFontChanged"
        app:layout_constraintTop_toBottomOf="@id/tiLoadingQtd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiLoadingDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/spinnerLoadingClients"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLoadingDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/loading_description"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="12sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiLoadingWithdrawal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/tiLoadingDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tiLoadingWithdrawalHour">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLoadingWithdrawal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/loading_withdrawal_date"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="12sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiLoadingWithdrawalHour"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/tiLoadingDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tiLoadingWithdrawal">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLoadingWithdrawalHour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/loading_withdrawal_hour"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="12sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiLoadingValuePropose"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/tiLoadingWithdrawal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLoadingValuePropose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/loading_value_propose"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="12sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinnerLoadingVehicles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/tiLoadingValuePropose"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiLoadingObservation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/spinnerLoadingVehicles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLoadingObservation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/loading_observation"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="12sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLoadingNext"
        style="@style/AppTheme.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/loading_button_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>